--- a/public/stylebonis.css
+++ b/public/stylebonis.css
@@ -2,7 +2,8 @@
 body{
 	margin:0;
 	color:#212431;
-	background:url("img/FondoLogin.jpg") no-repeat center;
+	background:url("img/Esquina.jpg") no-repeat center;
+	background-size: 100%;
 	font:600 16px/18px 'Open Sans',sans-serif;
 }
 *,:after,:before{box-sizing:border-box}
@@ -10,6 +11,15 @@ body{
 .clearfix:after{clear:both;display:block}
 a{color:inherit;text-decoration:none}
 
+::placeholder{
+	color:rgba(129, 247, 247, 0.685);
+}
+
+.divSeñorSaltando{
+	text-align: center;
+	margin-top: 15%;
+
+}
 .login-wrap{
 	width:100%;
 	margin:auto;
@@ -23,8 +33,10 @@ a{color:inherit;text-decoration:none}
 	width:100%;
 	height:100%;
 	position:absolute;
-	padding:90px 70px 50px 70px;
-	background:rgba(49,169,101,0.9);
+	
+	/* Top derecha, abajo izquierda */
+	padding: 8% 10% 8% 10%;
+	background:rgba(0, 62, 143, 0.719);
 }
 .login-html .sign-in-htm,
 .login-html .sign-up-htm{
@@ -55,10 +67,13 @@ a{color:inherit;text-decoration:none}
 	display:inline-block;
 	border-bottom:2px solid transparent;
 }
+
+
+/* Color de la linea debajo de iniciar sesio n */
 .login-html .sign-in:checked + .tab,
 .login-html .sign-up:checked + .tab{
 	color:#fff;
-	border-color:#31a964;
+	border-color:#84a4e0;
 }
 .login-form{
 	min-height:345px;
@@ -92,7 +107,7 @@ a{color:inherit;text-decoration:none}
 	font-size:12px;
 }
 .login-form .group .button{
-	background:#31a964;
+	background:#002e91;
 }
 .login-form .group label .icon{
 	width:15px;
@@ -126,7 +141,7 @@ a{color:inherit;text-decoration:none}
 	color:#fff;
 }
 .login-form .group .check:checked + label .icon{
-	background:#31a964;
+	background:#5131a9;
 }
 .login-form .group .check:checked + label .icon:before{
 	transform:scale(1) rotate(45deg);
